--- a/index.html
+++ b/index.html
@@ -7,8 +7,44 @@
     <title>tailwindcss</title>
     <link href="/css/tailwind.css" rel="stylesheet" />
   </head>
-  <body>
-    <h1 class="text-4xl font-bold text-center text-blue-500">Hello World</h1>
+  <body class="bg-gray-100">
+    <div class="px-8 py-12">
+      <img class="h-10" src="/img/logo.svg" alt="workcation" />
+      <img
+        class="mt-6 rounded-lg shadow-xl"
+        src="/img/beach-work.jpeg"
+        alt="woman vacation on beach"
+      />
+      <h1 class="mt-6 text-2xl font-bold text-gray-900">
+        You can work from anywhere.
+        <span class="text-indigo-500">Take advantage of it.</span>
+      </h1>
+      <p class="mt-2 text-gray-600">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem cumque
+        assumenda inventore exercitationem molestias! Facere non suscipit
+        tempore culpa ex maiores voluptate placeat nesciunt. Qui consectetur vel
+        commodi nam possimus.
+      </p>
+      <div class="mt-4">
+        <a
+          class="
+            inline-block
+            bg-indigo-500
+            text-white
+            px-5
+            py-3
+            rounded-lg
+            shadow-lg
+            uppercase
+            tracking-wider
+            font-semibold
+            text-sm
+          "
+          href="#"
+          >Book your escape</a
+        >
+      </div>
+    </div>
   </body>
 </html>
 <link
