--- a/index.html
+++ b/index.html
@@ -7,54 +7,85 @@
     <title>tailwindcss</title>
     <link href="/css/tailwind.css" rel="stylesheet" />
   </head>
-  <body class="bg-gray-100">
-    <div class="px-8 py-12 max-w-md mx-auto sm:max-w-xl">
-      <img class="h-10" src="/img/logo.svg" alt="workcation logo" />
-      <img
+  <body class="bg-gray-300">
+    <div class="bg-gray-100 grid lg:grid-cols-2 2xl:grid-cols-5">
+      <div
         class="
-          mt-6
-          rounded-lg
-          shadow-xl
-          sm:mt-8 sm:h-64 sm:w-full sm:object-cover
-          object-center
+          px-8
+          py-12
+          max-w-md
+          mx-auto
+          sm:max-w-xl
+          lg:px-12 lg:py-24 lg:max-w-full
+          xl:mr-0
+          2xl:col-span-2
         "
-        src="/img/beach-work.jpeg"
-        alt="woman vacation on beach"
-      />
-      <h1 class="mt-6 text-2xl font-bold text-gray-900 sm:mt-8 sm:text-4xl">
-        You can work from anywhere.
-        <span class="text-indigo-500">Take advantage of it.</span>
-      </h1>
-      <p class="mt-2 text-gray-600 sm:mt-4 sm:text-xl">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem cumque
-        assumenda inventore exercitationem molestias! Facere non suscipit
-        tempore culpa ex maiores voluptate placeat nesciunt. Qui consectetur vel
-        commodi nam possimus.
-      </p>
-      <div class="mt-4 sm:mt-6">
-        <a
-          class="
-            inline-block
-            bg-indigo-500
-            text-white
-            px-5
-            py-3
-            rounded-lg
-            shadow-lg
-            uppercase
-            tracking-wider
-            font-semibold
-            text-sm
-            sm:text-base
-          "
-          href="#"
-          >Book your escape</a
-        >
+      >
+        <div class="xl: max-w-xl">
+          <img class="h-10" src="/img/logo.svg" alt="workcation logo" />
+          <img
+            class="
+              mt-6
+              rounded-lg
+              shadow-xl
+              sm:mt-8 sm:h-64 sm:w-full sm:object-cover
+              object-center
+              lg:hidden
+            "
+            src="/img/beach-work.jpeg"
+            alt="woman vacation on beach"
+          />
+          <h1
+            class="
+              mt-6
+              text-2xl
+              font-bold
+              text-gray-900
+              sm:mt-8 sm:text-4xl
+              lg:text-3xl
+              xl:text-4xl
+            "
+          >
+            You can work from anywhere.
+            <br />
+            <span class="text-indigo-500">Take advantage of it.</span>
+          </h1>
+          <p class="mt-2 text-gray-600 sm:mt-4 sm:text-xl">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem
+            cumque assumenda inventore exercitationem molestias! Facere non
+            suscipit tempore culpa ex maiores voluptate placeat nesciunt. Qui
+            consectetur vel commodi nam possimus.
+          </p>
+          <div class="mt-4 sm:mt-6">
+            <a
+              class="
+                inline-block
+                bg-indigo-500
+                text-white
+                px-5
+                py-3
+                rounded-lg
+                shadow-lg
+                uppercase
+                tracking-wider
+                font-semibold
+                text-sm
+                sm:text-base
+              "
+              href="#"
+              >Book your escape</a
+            >
+          </div>
+        </div>
+      </div>
+      <!-- large viewport 2nd col -->
+      <div class="hidden lg:block relative 2xl:col-span-3">
+        <img
+          class="absolute inset-0 w-full h-full object-cover object-center"
+          src="/img/beach-work.jpeg"
+          alt="woman vacation on beach"
+        />
       </div>
     </div>
   </body>
 </html>
-<link
-  href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-  rel="stylesheet"
-/>
