--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
               class="
                 inline-block
                 bg-indigo-500
+                hover:bg-indigo-400 hover:-translate-y-0.5
+                focus:ring-indigo-500
+                focus:outline-none
+                focus:ring
+                focus:ring-offset-2
+                focus:ring-opacity-50
+                active:bg-indigo-600
+                transform
+                transition
                 text-white
                 px-5
                 py-3
